hphp/test/slow/dot_hack/shebang_with_header.hack.expectf
Fatal error: An expression is expected here. in %s/shebang_with_header.hack on line 2
